--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 </head>
 <body>
     <div>Hi This is demo page</div>
-<script src="./index.js"></script>    
+    <script  src="./pixel.js"></script>
+    <script src="./gtag.js"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-PR1HNFS5EK"></script>
+    <script src="./index.js"></script>    
+
 </body>
 </html>
